team and readme correction

--- a/templates/site/equipe.html.twig
+++ b/templates/site/equipe.html.twig
@@ -27,9 +27,8 @@
                     <div class="content">
                         <div class="inner">
                             <header class="major">
-                                <h3>{{ member.firstName }} {{ member.lastName }} - Poste</h3>
+                                <h3>{{ member.firstName }} {{ member.lastName }}</h3>
                             </header>
-                            <p>Présentation</p>
                         </div>
                     </div>
                 </section>
